[metadata]
name=torchutils
url=https://github.com/adnanhd/PyTorch-Utils
maintainer=adnanhd
maintainer_email=adnanharundogan@gmail.com
license=MPLv2.0, MIT Licenses
license_files=LICENSE.txt
description=Fast, Lightweight, Extensible and Scalable PyTorch Trainer
long_description=file: README.md
long_description_content_type=text/markdown
keywords=pytorch, trainer, early_stopping, model_chekcpoint, data, dataset
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
platforms=any
provides=torchutils

[options]
#setup_requires=setuptools>=42
zip_safe = false
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
packages = find: 
test_suite = tests
setup_requires =
    setuptools
    # setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
    # setuptools >=46.4.0     # let's you use attr: to extract version from a module
install_requires =
    #{install_requires}
tests_require =
    #{tests_require}



[options.extras_require]
dev=py-make>=0.1.0; twine; wheel
telegram=requests
notebook=ipywidgets>=6
[options.entry_points]
console_scripts=
    torchutils=torchutils.cli:main
[options.packages.find]
exclude=benchmarks, tests

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions
    
[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true

[coverage:run]
branch=True
include=torchutils/**/*
